# Log_analyzer

./: .gitignore  Cargo.toml  README.md  config.json
src/: analyzer.rs  config.rs  error.rs  handlers.rs  main.rs  models.rs  session.rs  ui.rs
static/: index.html
statis/: style.css
