[package]
name = "log-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures-util = "0.3"
